--- a/hellowhale.yml
+++ b/hellowhale.yml
@@ -15,7 +15,7 @@ spec:
         app: hellowhale 
     spec:
       containers:
-        - name: spring-boot
+        - name: hellowhale
           image: kartikrj/hellowhale
           ports:
-            - containerPort: 8090
+            - containerPort: 8080
