--- a/hellowhale.yml
+++ b/hellowhale.yml
@@ -19,3 +19,5 @@ spec:
           image: kartikrj/hellowhale
           ports:
             - containerPort: 8080
+      imagePullSecrets:
+      - name: acs-plugin--10lqccqmr1
