--- a/hellowhale.yml
+++ b/hellowhale.yml
@@ -21,3 +21,16 @@ spec:
             - containerPort: 8080
       imagePullSecrets:
       - name: docker-creds
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: hellowhale
+spec:
+  type: LoadBalancer
+  selector:
+    app: hellowhale
+  ports:
+    - port: 8080
+      targetPort: 30011
